# magicblock-live-cursors

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.tsx  main.tsx
app/src/components/: CursorLayer.tsx  StatusBar.tsx
app/src/hooks/: useCursors.ts
app/src/lib/: config.ts  cursor.ts  cursors_idl.json  instructions.ts  session.ts
programs/cursors/: Cargo.toml
programs/cursors/src/: lib.rs
tests/: cursors.ts
