[package]
name = "cursors"
version = "0.1.0"
description = "Live multi-user cursors on Solana via MagicBlock ephemeral rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cursors"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
